# OctoOps

./: .gitignore  BRAINSTORM.md  MODULE_BUILD_PROMPT.md  README.md  REMASTER_PROMPT.md  bootstrap.ps1  config.example.toml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
octoops/: __init__.py  __main__.py
octoops/core/: __init__.py  bootstrap.py  config.py  contracts.py  conversations.py  doctor.py  envfile.py  errors.py  event_bus.py  instance_lock.py  invites.py  logging.py  paths.py  permissions.py  plugin_loader.py  registry.py  response_router.py  role_store.py  router.py  scheduler.py  secure_io.py  storage.py
octoops/mcp/: __init__.py  server.py  service.py
octoops/modules/: __init__.py
octoops/shared/: models.py  (+2 more)
scripts/: fetch_bridge.py
tests/: conftest.py  test_access.py  test_bootstrap.py  test_brain.py  test_build_transports.py  test_config.py  test_conversations.py  test_deadlines.py  test_doctor.py  test_envfile.py  test_event_bus.py  test_help.py  test_instance_lock.py  test_invites.py  test_logging_redaction.py  test_mcp_server.py  test_mcp_service.py  test_paths.py  test_permissions.py  test_plugin_loader.py  test_response_router.py  test_router.py  test_secure_io.py  test_status_module.py  test_storage.py  test_telegram_adapter.py  test_telegram_pairing.py  test_whatsapp_bridge_auth.py  test_whatsapp_inbound.py  test_whatsapp_transport.py  test_wizard_app.py  test_wizard_i18n.py  test_wizard_run.py  test_wizard_secrets.py  test_wizard_state.py  test_wizard_support.py  test_wizard_writer.py
whatsmeow-bridge/: Makefile  go.mod  main.go
(+42 files in other folders)
