[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octoops"
version = "0.1.0"
description = "Modular async bot runtime: Telegram control plane, WhatsApp output transport."
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "python-telegram-bot>=21,<22",
    "aiohttp>=3.9,<4",
    "apscheduler>=3.10,<4",
    "tomlkit>=0.12",
    "textual>=0.60",
    "structlog>=24.1",
    "tzdata; sys_platform == 'win32'",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
octoops = "octoops.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Stage 4: expose OctoOps as an MCP server (opt-in).
mcp = ["mcp>=1.2", "uvicorn>=0.30"]

# uv installs this group by default with `uv sync` (kept in sync with the
# optional 'dev' extra above for pip users).
[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["octoops*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
